--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div class="contenedor max-w-1000">
         <h1>EBAC Shoes</h1>
         <nav class="flex-row">
-            <a href="#">Sobre a Loja</a>
-            <a href="#">Produtos</a>
+            <a href="#loja">Sobre a Loja</a>
+            <a href="#produtos">Produtos</a>
         </nav>
     </div>        
     </header>
@@ -33,7 +33,7 @@
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae facere quam architecto similique est. Exercitationem voluptate aliquam sed provident blanditiis, repellendus dolor qui, voluptatum et dicta saepe officiis praesentium eum.</p>
         </div>
     </section>
-
+    <h2>Produtos</h2>
     <section id="produtos" class="max-w-1000">
         <!--Card 1-->
         <div class="produto-card flex-row">
